solve npm install throwing fsevents warning
https://stackoverflow.com/questions/46929196/how-to-solve-npm-install-throwing-fsevents-warning-on-non-mac-os

--- a/test/fixtures/three.graphql/Makefile
+++ b/test/fixtures/three.graphql/Makefile
@@ -2,7 +2,8 @@
 default: build
 
 node_modules:
-	npm install
+	npm install --save core-js@^3
+	npm audit fix --force
 
 build: node_modules
 	npm run build
