Initializing test folder for three.graphql (#2)
* disable liquid processing engine using the raw tag

* disable liquid processing engine using the raw tag

* disable liquid processing engine using the raw tag

* disable liquid processing engine using the raw tag

* rename exe file to by pass page build warning

Warning details:

The page build completed successfully, but returned the following warning for the `gh-pages` branch:

It looks like you're using GitHub Pages to distribute binary files. We strongly suggest that you use releases to ship projects on GitHub. Releases are GitHub's way of packaging and providing software to your users. You can think of it as a replacement to using downloads to provide software. We found the following file(s) which may be a good candidate for releases: deps/npm/node_modules/term-size/vendor/windows/term-size.exe. For more information, see https://help.github.com/en/github/administering-a-repository/about-releases.

* test functionality using three.graphql - initial commit

Source:
https://github.com/jwerle/three.graphql

Description:
Declare a Three.js program with GraphQL

* test functionality using three.graphql - initial commit

Source:
https://github.com/jwerle/three.graphql

Description:
Declare a Three.js program with GraphQL

* Update README.md

* Create nodejs.yml

test functionality using three.graphql

* Update nodejs.yml

* solve npm install throwing fsevents warning

https://stackoverflow.com/questions/46929196/how-to-solve-npm-install-throwing-fsevents-warning-on-non-mac-os

* Update Makefile

* back yo orig

* Update Makefile

* Update Makefile

* Update Makefile

* list js

* rename to let the new build exist

* Update nodejs.yml

* Update package.json

* Update nodejs.yml

* Update package.json

* Update package.json

* Update Makefile

* Update package.json

* Update package.json

* Update package.json

* Update package.json

* Update p

--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Init CI
 
 on:
   push:
@@ -12,29 +12,24 @@ on:
       - '!development'
       - '!Chetabahana'
     paths:
-    - test/fixtures/three.graphql/**
+    - .*/*.yaml
+    - .*/*/*.yml
+    - .*/*/__init__
+    - .*/*/*/__init__
+    - .*/*/*/*/__init__
 
 jobs:
-  build:
+  job1:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x]
-
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: Initializing Repositories
       run: |
         bash .github/workflows/builders/__init__
       env:
-        CI: true
-        TAG_NAME: ubuntu
+        TAG_NAME: docker
         BRANCH_NAME: master
         GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         GCP_ACCOUNT: ${{ secrets.GCP_ACCOUNT }}
