Fix bash installation script  (#4)
* Add Support for CI/CD Workflows

* npm dedupe

* Add Support for CI/CD Workflows

* Update index.html

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Delete npm-shrinkwrap.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Delete package-lock.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Delete package-lock.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update scalars.js

* Add Support for CI/CD Workflows

* Update scalars.js

* Add Support for CI/CD Workflows

* Color type

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update scalars.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update scalars.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update scalars.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update scalars.js

* Update scalars.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* console.log(value);

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update build.js

* Update build.js

* Update build.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update build.js

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workflows

* Add Support for CI/CD Workflows

* Update package.json

* Add Support for CI/CD Workf

--- a/test/fixtures/three.graphql/Makefile
+++ b/test/fixtures/three.graphql/Makefile
@@ -32,16 +32,4 @@ $$(TARGETS):
 .PHONY: $$(TARGETS)
 endef
 
-#$(eval $(call npm_script_targets))
-echo $(call npm_script_targets)
-
-default: build
-
-node_modules:
-	npm install -f
-
-build: node_modules
-	npm run build
-
-test: build
-	npm test
+$(eval $(call npm_script_targets))
