--- a/test/fixtures/three.graphql/.gitignore
+++ b/test/fixtures/three.graphql/.gitignore
@@ -25,6 +25,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build.js.tmp*
 
 # Dependency directories
 node_modules
